syntax = "proto3";

import "validate/validate.proto";
import "google/protobuf/empty.proto";

option go_package = "github.com/athomecomar/backend/products/pbproducts";

package products;

service Products {
  rpc PredictCategory(stream PredictCategoryRequest) returns (stream PredictCategoryResponse) {}
}

message PredictCategoryRequest {
  string name = 1;
}

message PredictCategoryResponse {
  Category category = 1;    
  double score = 2;
}

message Category {
  uint64 id = 1;
  string name = 2;

  uint64 parent_id = 3;
  repeated Category childs = 4;
}


message Page {
  uint64 cursor = 1;
  uint64 size = 2;
}
